# karl

./: .gitignore  .gitmodules  CODE_OF_CONDUCT.md  Cargo.toml  INSTALL.md  LICENSE.md  README.md  Rocket.toml  build.rs  experiments.md  init.sh  setup.sh
add/: add.py
client/: Cargo.toml
cloud/: stt.py
data/: camera.html  karl.net  light.html
data/add/: add.py
data/cloud/: setup.sh  stt.py
data/hello_world/: setup.sh
data/person-detection/: README.md  detect.py  detect_standalone.py  karl.py  requirements.txt  run.sh  setup.sh
data/picovoice/: README.md  karl.py  karl_en_linux_2021-05-28-utc_v1_6_0.rhn  picovoice.py  picovoice_bulb.py  picovoice_demo_file.py  picovoice_light.py  picovoice_search.py  picovoice_weather.py  requirements.txt  setup.sh
data/stt_node/: main.js  setup.sh
examples/: camera.rs  client.rs  dp.rs  hello_world.rs  light_switch.rs  parallel.rs  person_detection.rs  service.rs  setup_4a.rs  setup_4c.rs  setup_experiment.rs  stt.rs  stt_client.rs  stt_standalone.rs
js-protos/: computerequest.js  computeresult.js  hostrequest.js  hostresult.js  import.js  pingrequest.js  pingresult.js
karl/: Cargo.toml
karl-common/: Cargo.toml
karl-common/examples/: hookgen.rs
karl-common/src/: builder.rs  error.rs  hook.rs  label.rs  lib.rs  module.rs  state_tags.rs  tag_parsing.rs  token.rs  types.rs
karl-controller/: Cargo.toml  Rocket.toml  build.rs  dashboard.sh  start.sh
karl-controller/src/: main.rs  net.rs
karl-controller/src/controller/: audit.rs  data.rs  mod.rs  runner.rs  scheduler.rs  sensors.rs  tags.rs
karl-controller/src/controller/policy/: contexts.rs  graph.rs  mod.rs
karl-controller/src/dashboard/: endpoint.rs  graph.rs  helper.rs  mod.rs
karl-controller/src/hook/: mod.rs
karl-controller/src/old_dashboard/: client.rs  mod.rs
karl-controller/src/policy/: graph.rs  mod.rs
karl-controller/templates/: index.hbs
karl-host/: Cargo.toml  start.sh
karl-host/src/: cache.rs  graph.rs  lib.rs  main.rs  net.rs  perms.rs  runtime.rs
karl-host/src/common/: mod.rs
karl-host/src/controller/: mod.rs  runner.rs
karl-host/src/dashboard/: helper.rs
karl-host/src/hook/: mod.rs
karl-host/src/host/: mod.rs  runtime.rs
karl-module-sdk/: Cargo.toml  README.md
karl-module-sdk/examples/: boolean.rs  differential_privacy.rs  false.rs  firmware_update.rs  light_switch.rs  query.rs  search.rs  set_true.rs  statistics.rs  targz.rs  weather.rs
karl-module-sdk/src/: lib.rs
karl-sensor-sdk/: Cargo.toml  README.md
karl-sensor-sdk/examples/: bulb.rs  camera.rs  light.rs  microphone.rs  occupancy_sensor.rs  sensor_camera.rs  speaker.rs
karl-sensor-sdk/examples/cpp/: CMakeLists.txt  Readme.md  example.cc
karl-sensor-sdk/examples/rust/: camera.rs  microphone.rs
karl-sensor-sdk/src/: lib.rs
karl-sensor-sdk/src/cpp/: CMakeLists.txt  Karl.cc  Karl.h  Readme.md
karl-sensor-sdk/src/python/: README.md  setup.py
karl-sensor-sdk/src/python/docs/: conf.py  index.rst  karl.rst
karl-sensor-sdk/src/python/docs/_build/doctrees/: environment.pickle  index.doctree
karl-sensor-sdk/src/python/docs/_build/html/: .buildinfo  genindex.html  index.html  objects.inv  search.html  searchindex.js
karl-sensor-sdk/src/python/docs/_build/html/_sources/: index.rst.txt
karl-sensor-sdk/src/python/karl/: __init__.py  karl.py  request_pb2.py  request_pb2_grpc.py
karl-sensor-sdk/src/python/karl_sensor_sdk.egg-info/: PKG-INFO  SOURCES.txt
karl-user-sdk/: Cargo.toml
karl-user-sdk/examples/: diff_priv_pipeline.rs  search_pipeline.rs  setup_experiment.rs  true_pipeline.rs
karl-user-sdk/src/: graph.rs  lib.rs  net.rs
karl/src/: lib.rs  net.rs
karl/src/common/: builder.rs
karl/src/controller/: audit.rs  data.rs  scheduler.rs
karl/src/dashboard/: client.rs  cookie.rs  mod.rs
karl/templates/: camera.hbs
lib/backend/: Cargo.toml
lib/backend/src/: binary.rs  lib.rs
lib/common/: Cargo.toml
lib/common/src/: error.rs  import.rs  lib.rs  request.rs
local/stt/lib/python3.6/config-3.6m-darwin/: Makefile
protos/: request.proto
scripts/: build.sh  camera.sh  controller.sh  host.sh  init.sh  install_dependencies.sh  install_experiment_data.sh  kill.sh  logs.sh  setup.sh  setup_cloudlab.sh  setup_stt.sh  setup_stt_node.sh  start.sh  sync.sh  sync_and_init.sh
sdk/karl-cpp-sdk/: .gitignore  Karl.cpp  Karl.h  PersonDetection.cpp  README.md  Register.cpp  generate.sh  linux.sh  macos.sh  mipsel.sh
sdk/karl-cpp-sdk/data/: index.hbs
sdk/karl-node-example/: .gitignore  init.sh  package.json  register.js  stt_client.js
sdk/karl-node-sdk/: README.md  generate.sh  index.js  package-lock.json  package.json
sdk/karl-node-sdk/protos/: request_pb.js
service/: Cargo.toml
src/: common.rs  controller.rs  dashboard.rs  error.rs  graph.rs  host.rs  import.rs  lib.rs  net.rs  packet.rs  request.rs  result.rs  runtime.rs
src/backend/: binary.rs  mod.rs  wasm.rs
src/common/: builder.rs  error.rs  import.rs  mod.rs  request.rs
src/controller/: audit.rs  data.rs  mod.rs  runner.rs  scheduler.rs  types.rs
src/dashboard/: api.rs  client.rs  cookie.rs  helper.rs  mod.rs  state.rs
src/hook/: mod.rs
src/host/: mod.rs
src/net/: controller.rs  executor.rs  mod.rs  register.rs
src/protos/: request.rs
templates/: camera.hbs  index.hbs
