[package]
name = "karl"
version = "0.1.0"
authors = ["Gina Yuan <gina.yuan@gmail.com>"]
edition = "2018"

[dependencies]
karl-common = { path = "lib/common" }
karl-backend = { path = "lib/backend" }
astro-dnssd = { path = "submodules/astro-dnssd" }
bincode = "1.3.1"
env_logger = "0.7"
log = "0.4"
serde = "1.0.115"
tokio = { version = "0.2", features = ["rt-threaded"] }
flate2 = "1.0.17"
tar = "0.4.30"
clap = "2.33.3"
dirs = "1.0.5"
rand = "0.7.3"
