[package]
name = "karl"
version = "0.1.0"
authors = ["Gina Yuan <gina.yuan@gmail.com>"]
edition = "2018"

[features]
default = []
wasm = ["wasmer"]

[dependencies.wasmer]
path = "submodules/wasmer"
default-features = false
features = ["backend-cranelift", "wasi"]
optional = true

[dependencies.wapm-cli]
path = "submodules/wapm-cli"
optional = true

[target."cfg(target_os = \"linux\")".dependencies.sys-mount]
version = "1.2.1"

[dependencies]
astro-dnssd = { path = "submodules/astro-dnssd" }
bincode = "1.3.1"
env_logger = "0.7"
log = "0.4"
serde = { version = "1.0",  features = ["derive"] }
tokio = { version = "0.2", features = ["rt-threaded"] }
flate2 = "1.0.17"
tar = "0.4.30"
clap = "2.33.3"
dirs = "1.0.5"
rand = "0.7.3"
protobuf = "2.18.0"
bytes = "0.6"
rocket = "0.4.6"
handlebars = "1.0"
reqwest = { version = "0.11", features = ["blocking"] }

[dependencies.rocket_contrib]
version = "0.4.6"
default-features = false
features = ["handlebars_templates"]

[build-dependencies]
protoc-rust = "2.18.0"

[dev-dependencies]
tempdir = "0.3"
serial_test = "*"
