[package]
name = "karl-common"
version = "0.1.0"
authors = ["Gina Yuan <gina.yuan@gmail.com>"]
edition = "2018"

[features]
default = []

[dependencies]
bincode = "1.3"
serde = { version = "1.0",  features = ["derive"] }
flate2 = "1.0.17"
tar = "0.4.30"
rand = "0.8"

[dev-dependencies]
tempdir = "0.3"
