[package]
name = "karl-controller"
version = "0.1.0"
authors = ["Gina Yuan <gina.yuan@gmail.com>"]
edition = "2018"

[features]
default = []

[dependencies]
bincode = "1.3.1"
env_logger = "0.7"
log = "0.4"
serde = { version = "1.0",  features = ["derive"] }
tokio = { version = "1.4", features = ["rt", "macros", "sync", "time", "rt-multi-thread"] }
tokio-stream = { version =  "0.1", features = ["net"] }
clap = "2.33.3"
rand = "0.8"
rocket = "0.4.6"
handlebars = "1.0"
reqwest = { version = "0.11", features = ["blocking"] }
tonic = "0.4"
prost = "0.7"
chrono = "0.4"
karl-common = { path = "../karl-common" }

[dependencies.rocket_contrib]
version = "0.4.6"
default-features = false
features = ["handlebars_templates"]

[build-dependencies]
tonic-build = "0.4"

[dev-dependencies]
tempdir = "0.3"
serde_json = "1.0"
