[package]
name = "karl-host"
version = "0.1.0"
authors = ["Gina Yuan <gina.yuan@gmail.com>"]
edition = "2018"

[features]
default = []

[dependencies]
env_logger = "0.7"
log = "0.4"
serde = { version = "1.0",  features = ["derive"] }
tokio = { version = "1.4", features = ["rt", "macros", "sync", "time", "rt-multi-thread"] }
tokio-stream = { version =  "0.1", features = ["net"] }
flate2 = "1.0.17"
tar = "0.4.30"
clap = "2.33.3"
rand = "0.8"
reqwest = { version = "0.11", features = ["blocking"] }
tonic = "0.4"
prost = "0.7"
sys-mount = "1.2"
karl-common = { path = "../karl-common" }

[build-dependencies]
tonic-build = "0.4"
