[package]
name = "karl-module-sdk"
version = "0.1.0"
authors = ["Gina Yuan <gina.yuan@gmail.com>"]
edition = "2018"

[features]
default = []

[dependencies]
bincode = "1.3.1"
tonic = "0.4"
prost = "0.7"

[build-dependencies]
tonic-build = "0.4"

[dev-dependencies]
fastrand = "1.4"
tokio = { version = "1.4", features = ["rt-multi-thread"] }
flate2 = "1.0.17"
tar = "0.4.30"
chrono = "0.4"
serde_json = "1.0"