[package]
name = "karl-sensor-sdk"
version = "0.1.0"
authors = ["Gina Yuan <gina.yuan@gmail.com>"]
edition = "2018"

[features]
default = []

[dependencies]
bincode = "1.3.1"
tonic = "0.4"
prost = "0.7"

[build-dependencies]
tonic-build = "0.4"

[dev-dependencies]
env_logger = "0.7"
log = "0.4"
clap = "2.33.3"
tokio = { version = "1.4", features = ["rt", "macros", "sync", "time", "rt-multi-thread"] }

[lib]
path = "src/rust/lib.rs"

[[example]]
name="bulb"
path="examples/rust/bulb.rs"

[[example]]
name="camera"
path="examples/rust/camera.rs"

[[example]]
name="microphone"
path="examples/rust/microphone.rs"
