[package]
name = "karl"
version = "0.1.0"
authors = ["Gina Yuan <gina.yuan@gmail.com>"]
edition = "2018"

[features]
default = []

[dependencies]
bincode = "1.3.1"
env_logger = "0.7"
log = "0.4"
serde = { version = "1.0",  features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.4", features = ["rt", "macros", "sync", "time", "rt-multi-thread"] }
tokio-stream = { version =  "0.1", features = ["net"] }
flate2 = "1.0.17"
tar = "0.4.30"
clap = "2.33.3"
dirs = "1.0.5"
rand = "0.8"
bytes = "0.6"
rocket = "0.4.6"
handlebars = "1.0"
reqwest = { version = "0.11", features = ["blocking"] }
regex = "1"
tonic = "0.4"
prost = "0.7"
chrono = "0.4"
sys-mount = "1.2"

[dependencies.rocket_contrib]
version = "0.4.6"
default-features = false
features = ["handlebars_templates"]

[build-dependencies]
tonic-build = "0.4"

[dev-dependencies]
tempdir = "0.3"

[[bin]]
name = "controller"
path = "src/bin/controller.rs"

[[bin]]
name = "host"
path = "src/bin/host.rs"
