[package]
name = "karl-backend"
version = "0.1.0"
authors = ["Gina Yuan <gina.yuan@gmail.com>"]
edition = "2018"

[dependencies.wasmer]
path = "../../submodules/wasmer"
default-features = false
features = ["backend-cranelift", "wasi"]

[target."cfg(target_os = \"linux\")".dependencies.sys-mount]
version = "1.2.1"

[dependencies]
env_logger = "0.7"
log = "0.4"
karl-common = { path = "../common" }

[dev-dependencies]
serial_test = "*"
