[package]
name = "karl-common"
version = "0.1.0"
authors = ["Gina Yuan <gina.yuan@gmail.com>"]
edition = "2018"

[dependencies.wasmer]
path = "../../submodules/wasmer"
default-features = false
features = ["backend-cranelift", "wasi"]

[dependencies]
wapm-cli = { path = "../../submodules/wapm-cli" }
env_logger = "0.7"
log = "0.4"
bincode = "1.3.1"
serde = "1.0.115"
tempdir = "0.3"
flate2 = "1.0.17"
tar = "0.4.30"
